--- a/tablebooking/package.json
+++ b/tablebooking/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.23.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "firebase": "^11.1.0",
     "prop-types": "^15.8.1",
+    "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
