--- a/tablebooking/package.json
+++ b/tablebooking/package.json
@@ -13,7 +13,9 @@
     "antd": "^5.23.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "firebase": "^11.1.0",
+    "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
